[Perf] Measure only the last tab's dump in multitab test and set the default tabs count to 10.

--- a/tools/perf/configs/dashboard/smoke-chrome.json5
+++ b/tools/perf/configs/dashboard/smoke-chrome.json5
@@ -33,6 +33,13 @@
       ]
     },
     {
+      "name": "system_health.memory_desktop",
+      "pageset-repeat": 10,
+      "stories": [
+        "multitab_load:site:example.com:2023",
+      ]
+    },
+    {
       "name": "speedometer2",
       "pageset-repeat": 1,
     },
