--- a/tools/perf/configs/dashboard/smoke-brave.json5
+++ b/tools/perf/configs/dashboard/smoke-brave.json5
@@ -34,9 +34,9 @@
     },
     {
       "name": "system_health.memory_desktop",
-      "pageset-repeat": 1,
+      "pageset-repeat": 10,
       "stories": [
-        "load:site:multitab:brave:2023",
+        "multitab_load:site:example.com:2023",
       ]
     },
     {
