--- a/browser/ui/webui/BUILD.gn
+++ b/browser/ui/webui/BUILD.gn
@@ -3,6 +3,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
+import("//brave/build/config.gni")
+
 source_set("browser_tests") {
   testonly = true
 
@@ -24,4 +26,15 @@ source_set("browser_tests") {
     "//testing/gtest",
     "//ui/base",
   ]
+}
+
+if (enable_sparkle) {
+  source_set("unit_tests") {
+    testonly = true
+    sources = [ "help/brave_version_updater_mac_unittest.mm" ]
+    deps = [
+      "//base",
+      "//testing/gtest",
+    ]
+  }
 }
