--- a/ui/color/BUILD.gn
+++ b/ui/color/BUILD.gn
@@ -25,6 +25,8 @@ source_set("brave_color_mixers") {
     "$target_gen_dir/nala/nala_color_mixer.h",
     "brave_ref_color_mixer.cc",
     "brave_ref_color_mixer.h",
+    "brave_sys_color_mixer.cc",
+    "brave_sys_color_mixer.h",
   ]
 
   deps = [
