--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -147,7 +147,7 @@ test("brave_unit_tests") {
     "//components/sync_device_info/device_info_sync_bridge_unittest.cc",
   ]
 
-  if (!is_android && !is_ios) {
+  if (!is_android) {
     sources += [ "//brave/browser/ipfs/ipfs_component_cleaner_unittest.cc" ]
   }
 
