--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -110,7 +110,6 @@ test("brave_unit_tests") {
     "//brave/chromium_src/chrome/browser/lookalikes/lookalike_url_navigation_throttle_unittest.cc",
     "//brave/chromium_src/chrome/browser/signin/account_consistency_disabled_unittest.cc",
     "//brave/chromium_src/components/autofill/core/browser/autofill_experiments_unittest.cc",
-    "//brave/chromium_src/components/update_client/request_sender_unittest.cc",
     "//brave/chromium_src/components/variations/service/field_trial_unittest.cc",
     "//brave/chromium_src/net/cookies/brave_canonical_cookie_unittest.cc",
     "//brave/common/brave_content_client_unittest.cc",
@@ -323,6 +322,7 @@ test("brave_unit_tests") {
   }
 
   if (is_mac) {
+    sources += [ "//brave/chromium_src/components/update_client/request_sender_unittest.cc" ]
     deps += [ "//brave/components/update_client" ]
   }
 
