--- a/components/update_client/sources.gni
+++ b/components/update_client/sources.gni
@@ -9,7 +9,9 @@ brave_components_update_client_deps = [
 ]
 
 if (is_mac) {
-  brave_components_update_client_deps += [ "//brave/components/update_client" ]
+  brave_components_update_client_deps += [
+    "//brave/components/update_client:features"
+  ]
 }
 
 brave_components_update_client_public_deps =
