--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -323,7 +323,7 @@ test("brave_unit_tests") {
 
   if (is_mac) {
     sources += [ "//brave/chromium_src/components/update_client/request_sender_unittest.cc" ]
-    deps += [ "//brave/components/update_client" ]
+    deps += [ "//brave/components/update_client:features" ]
   }
 
   if (enable_sparkle) {
