--- a/components/cosmetic_filters/resources/data/BUILD.gn
+++ b/components/cosmetic_filters/resources/data/BUILD.gn
@@ -9,8 +9,7 @@ transpile_web_ui("cosmetic_filters_resources") {
       rebase_path("content_cosmetic.ts"),
     ],
     [
-      # TODO: move to brave/components/cosmetic_filter
-      "//brave/components/brave_extension/extension/brave_extension/content_element_picker.ts",
+      "content_element_picker",
       rebase_path("content_element_picker.ts"),
     ],
   ]
