--- a/components/cosmetic_filters/resources/data/BUILD.gn
+++ b/components/cosmetic_filters/resources/data/BUILD.gn
@@ -9,8 +9,8 @@ transpile_web_ui("cosmetic_filters_resources") {
       rebase_path("content_cosmetic.ts"),
     ],
     [
-      "content_element_picker",
-      rebase_path("content_element_picker.ts"),
+      "element_picker",
+      rebase_path("element_picker.ts"),
     ],
   ]
 
