--- a/browser/ipfs/sources.gni
+++ b/browser/ipfs/sources.gni
@@ -9,13 +9,9 @@ brave_browser_ipfs_sources = []
 brave_browser_ipfs_deps = []
 
 if (!is_android) {
-  brave_browser_ipfs_sources += [
-    "//brave/browser/ipfs/ipfs_component_cleaner.cc",
-    "//brave/browser/ipfs/ipfs_component_cleaner.h",
-  ]
+  brave_browser_ipfs_sources += [ "//brave/browser/ipfs/ipfs_common.h" ]
   brave_browser_ipfs_deps += [
     "//base",
     "//build:buildflag_header_h",
-    "//chrome/common",
   ]
 }
