--- a/components/ipfs/BUILD.gn
+++ b/components/ipfs/BUILD.gn
@@ -19,4 +19,11 @@ static_library("ipfs") {
     "//net",
     "//url",
   ]
+
+  if (!is_android) {
+    sources += [
+      "ipfs_component_cleaner.cc",
+      "ipfs_component_cleaner.h",
+    ]
+  }
 }
