--- a/components/ipfs/test/BUILD.gn
+++ b/components/ipfs/test/BUILD.gn
@@ -9,7 +9,14 @@ import("//testing/test.gni")
 source_set("brave_ipfs_unit_tests") {
   testonly = true
 
-  sources = [ "//brave/components/ipfs/ipfs_utils_unittest.cc" ]
+  sources = [
+    "//brave/components/ipfs/ipfs_component_cleaner.cc",
+    "//brave/components/ipfs/ipfs_utils_unittest.cc",
+  ]
+
+  if (!is_android) {
+    sources += [ "//brave/components/ipfs/ipfs_component_cleaner_unittest.cc" ]
+  }
 
   deps = [
     "//base/test:test_support",
