fixed according review suggestions
Signed-off-by: Vadym Struts <vstruts@brave.com>

--- a/components/ipfs/BUILD.gn
+++ b/components/ipfs/BUILD.gn
@@ -25,5 +25,6 @@ static_library("ipfs") {
       "ipfs_component_cleaner.cc",
       "ipfs_component_cleaner.h",
     ]
+    deps += [ "//chrome/common:constants" ]
   }
 }
