added ipfs common header
Signed-off-by: Vadym Struts <vstruts@brave.com>

--- a/components/ipfs/BUILD.gn
+++ b/components/ipfs/BUILD.gn
@@ -22,6 +22,7 @@ static_library("ipfs") {
 
   if (!is_android) {
     sources += [
+      "ipfs_common.h",
       "ipfs_component_cleaner.cc",
       "ipfs_component_cleaner.h",
     ]
