added ipfs common header
Signed-off-by: Vadym Struts <vstruts@brave.com>

--- a/components/ipfs/BUILD.gn
+++ b/components/ipfs/BUILD.gn
@@ -20,7 +20,7 @@ static_library("ipfs") {
     "//url",
   ]
 
-  if (!is_android) {
+  if (!is_android && !is_ios) {
     sources += [
       "ipfs_common.h",
       "ipfs_component_cleaner.cc",
