--- a/components/version_info/android/BUILD.gn
+++ b/components/version_info/android/BUILD.gn
@@ -10,14 +10,14 @@ import("//build/util/process_version.gni")
 _brave_version_constants_java_file = "$target_gen_dir/java/org/chromium/base/version_info/BraveVersionConstants.java"
 
 android_library("java") {
-  print("_brave_version_constants_java_file:$_brave_version_constants_java_file")
   sources = [ _brave_version_constants_java_file ]
   deps = [ ":generate_brave_version_constants" ]
 }
 
 process_version("generate_brave_version_constants") {
   process_only = true
-  template_file = "java/org/chromium/base/version_info/BraveVersionConstants.java.version"
+  template_file =
+      "java/org/chromium/base/version_info/BraveVersionConstants.java.version"
   output = _brave_version_constants_java_file
   extra_args = [
     "-e",
