--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -455,16 +455,19 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/util/UsageMonitor.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnNativeWorker.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnObserver.java",
+  "../../brave/android/java/org/chromium/chrome/browser/vpn/BraveVpnServiceFactoryAndroid.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/DisconnectVpnBroadcastReceiver.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/activities/BraveVpnParentActivity.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/activities/BraveVpnProfileActivity.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/activities/BraveVpnSupportActivity.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/activities/VpnAlwaysOnActivity.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/activities/VpnPaywallActivity.java",
+  "../../brave/android/java/org/chromium/chrome/browser/vpn/activities/VpnServerActivity.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/activities/VpnServerSelectionActivity.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/adapters/AlwaysOnPagerAdapter.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/adapters/BraveVpnPlanPagerAdapter.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/adapters/BraveVpnServerSelectionAdapter.java",
+  "../../brave/android/java/org/chromium/chrome/browser/vpn/adapters/VpnServerAdapter.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/fragments/BraveVpnAlwaysOnErrorDialogFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/fragments/BraveVpnConfirmDialogFragment.java",
   "../../brave/android/java/org/chromium/chrome/browser/vpn/fragments/LinkVpnSubscriptionDialogFragment.java",
