--- a/browser/ui/webui/BUILD.gn
+++ b/browser/ui/webui/BUILD.gn
@@ -37,7 +37,7 @@ if (enable_sparkle) {
     deps = [
       "//base",
       "//base/test:test_support",
-      "//brave/components/update_client:features",
+      "//brave/browser:features",
       "//chrome/browser/ui",
       "//testing/gtest",
     ]
