--- a/browser/BUILD.gn
+++ b/browser/BUILD.gn
@@ -67,10 +67,10 @@ group("browser") {
 }
 
 if (is_mac) {
-  source_set("features") {
+  source_set("mac_features") {
     sources = [
-      "features.cc",
-      "features.h",
+      "mac_features.cc",
+      "mac_features.h",
     ]
     deps = [ "//base" ]
   }
