Adds missing dep.
 ../../brave/browser/ui/brave_rewards/rewards_panel_coordinator.h:11:10: fatal error: 'brave/components/brave_rewards/common/mojom/rewards_panel.mojom.h' file not found
    11 | #include "brave/components/brave_rewards/common/mojom/rewards_panel.mojom.h"
       |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 1 error generated.

--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -1238,6 +1238,7 @@ source_set("ui") {
       "//brave/browser/ui/webui/brave_wallet/common_handler",
       "//brave/components/brave_news/browser",
       "//brave/components/brave_news/browser/resources:generated_resources",
+      "//brave/components/brave_rewards/common/mojom",
       "//brave/components/brave_wallet/browser:permission_utils",
       "//brave/components/brave_wallet/common",
       "//brave/components/brave_wallet/common:mojom",
